--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -63,6 +63,11 @@
     <string name="accessibility_quick_settings_profiles_changed_off">Profiles turned off.</string>
     <string name="accessibility_quick_settings_profiles_changed">Profile changed to <xliff:g id="profile" example="Default">%s</xliff:g>.</string>
 
+
+<!-- volte icon switch -->
+    <string name="status_bar_volte">VoLTE</string>
+
+
     <!-- USB tethering QS tile -->
     <string name="quick_settings_usb_tether_label">USB tethering</string>
 
