--- a/packages/SystemUI/res/xml/status_bar_prefs.xml
+++ b/packages/SystemUI/res/xml/status_bar_prefs.xml
@@ -26,6 +26,10 @@
         android:key="headset"
         android:title="@string/headset" />
 
+<com.android.systemui.tuner.StatusBarSwitch
+        android:key="volte"
+        android:title="@string/status_bar_volte" />
+
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="managed_profile"
         android:title="@string/status_bar_work" />
